# jahan-nama

./: .env.example  Cargo.toml  README.md  api.md  build.rs  main.py  requirements.txt
.github/workflows/: release.yml
gui/: LabelWindow.py  README.md  main.py
installer/inno/: jahan-nama.iss  mci-client.iss
installer/wix/: jahan-nama.wxs  mci-client.wxs
public/api/: index.php
scripts/: package-macos.sh
src/: client.rs  env_store.rs  format.rs  gui.rs  lib.rs  main.rs
